--- a/app/src/main/res/layout/activity_learn_activity_aortic_stenosis.xml
+++ b/app/src/main/res/layout/activity_learn_activity_aortic_stenosis.xml
@@ -4,14 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.admin.heartbeat.LearnActivityS2">
+    tools:context="com.example.admin.heartbeat.LearnActivityAorticStenosis">
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/scrollView9"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" >
+        android:id="@+id/scrollView4"
+        android:layout_centerVertical="true" >
 
         <LinearLayout
             android:orientation="vertical"
@@ -21,8 +20,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/s2"
-                android:id="@+id/textView11" />
+                android:text="@string/aorticstenosis1"
+                android:id="@+id/textView6" />
         </LinearLayout>
     </ScrollView>
 
