--- a/app/src/main/res/layout/activity_learn_activity_s4.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s4.xml
@@ -6,7 +6,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.admin.heartbeat.LearnActivityS4">
 
-    <TextView android:text="S4" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView11"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" >
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/s4"
+                android:id="@+id/textView13" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
