--- a/app/src/main/res/layout/activity_learn_activity_aortic_stenosis.xml
+++ b/app/src/main/res/layout/activity_learn_activity_aortic_stenosis.xml
@@ -6,23 +6,37 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.admin.heartbeat.LearnActivityAorticStenosis">
 
-    <ScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView4"
-        android:layout_centerVertical="true" >
+        android:layout_height="fill_parent">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ImageButton
+            android:layout_width="@dimen/icon_size_small"
+            android:layout_height="@dimen/icon_size_small"
+            android:background="@drawable/playicon"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onButtonClickPlay"
+            android:id="@+id/imageButton4" />
+
+        <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:id="@+id/scrollView4"
+            android:layout_centerVertical="true" >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/aorticstenosis1"
-                android:id="@+id/textView6" />
-        </LinearLayout>
-    </ScrollView>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/aorticstenosis1"
+                    android:id="@+id/textView6" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
