Irene: Fixed main activity to not hide the bottom navigation bar. Deleted a lot of auto-generated functions in the Mainpage.java file.

--- a/app/src/main/res/layout/activity_learn_activity_mitral_regurgitation.xml
+++ b/app/src/main/res/layout/activity_learn_activity_mitral_regurgitation.xml
@@ -12,6 +12,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
+        <ProgressBar
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:id="@+id/progressBar4"
+            android:layout_gravity="center" />
+
         <ImageButton
             android:layout_width="@dimen/icon_size_small"
             android:layout_height="@dimen/icon_size_small"
