--- a/app/src/main/res/layout/activity_learn_activity_mitral_stenosis.xml
+++ b/app/src/main/res/layout/activity_learn_activity_mitral_stenosis.xml
@@ -11,6 +11,13 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:id="@+id/progressBar3"
+            android:layout_gravity="center" />
+
         <ImageButton
             android:layout_width="@dimen/icon_size_small"
             android:layout_height="@dimen/icon_size_small"
