--- a/app/src/main/res/layout/activity_game1.xml
+++ b/app/src/main/res/layout/activity_game1.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
-    android:configChanges="orientation|keyboardHidden">
+    android:configChanges="orientation|keyboardHidden"
     tools:context="com.example.admin.heartbeat.Game1">
 
     <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent"
