--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -1,32 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc"
-    tools:context="com.example.admin.heartbeat.Practice">
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:screenOrientation="portrait"
+        android:configChanges="orientation|keyboardHidden"
+        tools:context="com.example.admin.heartbeat.Practice">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
-        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
-        android:text="@string/dummy_content" />
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/dummy_button" />
-
-        </LinearLayout>
         <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:orientation="vertical">
@@ -37,14 +18,14 @@
                 android:layout_height="wrap_content"
                 android:weightSum="1"
                 android:gravity="center|center_horizontal"
-                android:layout_weight="0.1">
+                android:layout_weight="0.05">
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0.3"
+                    android:layout_weight="0.1"
                     android:gravity="fill_horizontal">
 
                     <LinearLayout
@@ -68,7 +49,7 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:text="000"
-                            android:id="@+id/textView"
+                            android:id="@+id/blueScore"
                             android:textColor="#0000FF"
                             android:textSize="40dp"
                             android:gravity="center_vertical|center_horizontal"
@@ -86,21 +67,21 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="Time"
-                            android:id="@+id/textView5"
+                            android:id="@+id/timetextView"
                             android:layout_weight="0.1"
                             android:gravity="center_horizontal"
                             android:textColor="@color/black" />
 
-                        <Chronometer
-                            android:layout_width="fill_parent"
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:id="@+id/chronometer"
-                            android:numeric="integer"
-                            android:typeface="normal"
-                            android:textSize="40dp"
-                            android:gravity="center_horizontal"
-                            android:layout_weight="0.9"
-                            android:textColor="@color/black" />
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="00"
+                            android:id="@+id/textTime"
+                            android:layout_weight="0.1"
+                            android:textColor="@color/black"
+                            android:textSize="40dp" />
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -124,7 +105,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="000"
-                            android:id="@+id/textView2"
+                            android:id="@+id/redScore"
                             android:textColor="@color/red"
                             android:textSize="40dp"
                             android:layout_weight="0.9"
@@ -140,23 +121,35 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.8">
+                android:layout_weight="0.9">
 
                 <ProgressBar
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/progressBar"
-                    android:layout_weight="0.3"
-                    android:background="@drawable/apex" />
+                    android:id="@+id/progressBarBlue"
+                    android:layout_weight="0.45"
+                    android:background="@drawable/apex"
+                    android:progress="75"
+                    android:progressTint="@color/_blue"
+                    android:max="100" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="0.1" />
 
                 <ProgressBar
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/progressBar2"
-                    android:layout_weight="0.3"
-                    android:background="@drawable/bell" />
+                    android:id="@+id/progressBarRed"
+                    android:layout_weight="0.45"
+                    android:background="@drawable/hsred1"
+                    android:max="100"
+                    android:progress="50"
+                    android:progressTint="@color/red" />
 
             </LinearLayout>
 
@@ -182,7 +175,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Aortic Stenosis"
-                    android:id="@+id/textView6"
+                    android:id="@+id/textCondition"
                     android:layout_weight="0.90"
                     android:textSize="40dp"
                     android:gravity="center_vertical|center_horizontal"
@@ -201,7 +194,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageButton"
+                    android:id="@+id/redButton"
                     android:layout_weight="0.5"
                     android:src="@drawable/practiceicon"
                     android:scaleType="centerCrop"
@@ -211,15 +204,14 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageButton2"
+                    android:id="@+id/blueButton"
                     android:layout_weight="0.5"
-                    android:src="@drawable/practiceicon2"
+                    android:src="@drawable/practiceicon3"
                     android:scaleType="centerCrop"
                     android:background="@color/white"
                     android:adjustViewBounds="true" />
             </LinearLayout>
 
         </LinearLayout>
-    </FrameLayout>
 
-</FrameLayout>
+    </RelativeLayout>
