--- a/app/src/main/res/layout/activity_learn_activity_s1.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s1.xml
@@ -23,6 +23,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/s1"
                 android:id="@+id/textView10" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/diagrams1" />
         </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
