--- a/app/src/main/res/layout/activity_learn_activity_s3.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s3.xml
@@ -23,6 +23,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/s3"
                 android:id="@+id/textView12" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/diagrams3" />
         </LinearLayout>
     </ScrollView>
 
