--- a/app/src/main/res/layout/activity_learn_activity_s4.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s4.xml
@@ -23,6 +23,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/s4"
                 android:id="@+id/textView13" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/diagrams4" />
         </LinearLayout>
     </ScrollView>
 
