Irene: Committing prelim merging of game.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#ffffff</color>
     <color name="red">#ffed145c</color>
     <color name="grey">#ff505050</color>
-
+    <color name="black">#000000</color>
 </resources>
 
 
