--- a/app/src/main/res/layout/activity_game1.xml
+++ b/app/src/main/res/layout/activity_game1.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
     android:configChanges="orientation|keyboardHidden"
-    tools:context="com.example.admin.heartbeat.Practice">
+    tools:context="com.example.admin.heartbeat.Game1">
 
     <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -67,7 +67,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="Time"
-                        android:id="@+id/timetextView"
+                        android:id="@+id/textView5"
                         android:layout_weight="0.1"
                         android:gravity="center_horizontal"
                         android:textColor="@color/black" />
