--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -26,20 +26,21 @@
             android:layout_gravity="top">
 
             <com.example.admin.heartbeat.radarGraph
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
                 android:longClickable="false"
                 android:visibility="visible"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
-                android:id="@+id/radar_graph"/>
+                android:id="@+id/radar_graph"
+                android:layout_weight="0.5" />
 
             <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:background="@color/white" android:orientation="horizontal"
                 tools:ignore="UselessParent"
-                android:layout_gravity="top|center_horizontal">
+                android:layout_gravity="bottom|center_horizontal">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -65,6 +66,7 @@
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/grey" />
+
                 </LinearLayout>
 
                 <LinearLayout
