--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -132,6 +132,38 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="A"
+                    android:id="@+id/textView15"
+                    android:layout_gravity="center_vertical"/>
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/progressBarRed"
+                    android:layout_weight="0.45"
+                    android:background="@drawable/hsred1"
+                    android:max="100"
+                    android:progress="50"
+                    android:progressTint="@color/red" />
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.1" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.45">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="B"
                     android:id="@+id/textView14"
                     android:layout_gravity="center_vertical" />
@@ -147,23 +179,6 @@
                     android:progressTint="@color/blue"
                     android:max="100" />
             </LinearLayout>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="0.1" />
-
-            <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/progressBarRed"
-                android:layout_weight="0.45"
-                android:background="@drawable/hsred1"
-                android:max="100"
-                android:progress="50"
-                android:progressTint="@color/red" />
 
         </LinearLayout>
 
