--- a/app/src/main/res/layout/activity_learn_activity_mitral_stenosis.xml
+++ b/app/src/main/res/layout/activity_learn_activity_mitral_stenosis.xml
@@ -13,10 +13,11 @@
 
         <ProgressBar
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/learn_progress_bar_height"
             style="?android:attr/progressBarStyleHorizontal"
             android:id="@+id/progressBar3"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:background="@drawable/hsblack7"/>
 
         <ImageButton
             android:layout_width="@dimen/icon_size_small"
