--- a/app/src/main/res/layout/activity_learn_activity_s4.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s4.xml
@@ -28,7 +28,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView2"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/diagrams4" />
+                android:background="@drawable/diagrams4"
+                android:scaleType="centerInside"/>
         </LinearLayout>
     </ScrollView>
 
