--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="icon_size_small">50dp</dimen>
     <dimen name="icon_size_rect_w">350dp</dimen>
     <dimen name="icon_size_rect_h">50dp</dimen>
+    <dimen name="learn_progress_bar_height">50dp</dimen>
 </resources>
