--- a/app/src/main/res/layout/activity_learn_activity_cardiac_cycle.xml
+++ b/app/src/main/res/layout/activity_learn_activity_cardiac_cycle.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView"
-                android:background="@drawable/cardiaccycle" />
+                android:src="@drawable/cardiaccycle" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView2"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/diagramcardiac" />
+                android:src="@drawable/diagramcardiac" />
         </LinearLayout>
     </ScrollView>
 
