--- a/app/src/main/res/layout/activity_learn_activity_s1.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s1.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView2"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/diagrams1"
+                android:src="@drawable/diagrams1"
                 android:scaleType="fitXY"/>
         </LinearLayout>
     </ScrollView>
