--- a/app/src/main/res/layout/activity_learn_activity_s2.xml
+++ b/app/src/main/res/layout/activity_learn_activity_s2.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView2"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/diagrams2"
+                android:src="@drawable/diagrams2"
                 android:scaleType="centerInside"/>
         </LinearLayout>
     </ScrollView>
